Bug 949036 - Make ID3v2 tag detection more careful - not every bit of data containing "ID3" is a tag. r=eflores